--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.12.4",
     "gulp": "^3.8.11",
     "gulp-express": "^0.3.5",
+    "gulp-gh-pages": "^0.5.1",
     "gulp-open": "^0.3.2",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
